syntax = "proto3";

package dao;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "/dao";

service DAO {
  rpc GetAllVertex(google.protobuf.Empty) returns (Vertices){}
  rpc GetVertexByAddress(VertexRequest) returns (Vertex){}
}

message Address {
  string address = 1;
}

message ID {
  string id = 1;
}

message Vertex {
  string address = 1;
  string accountType = 2;
  repeated ID txEdges = 3;

  google.protobuf.Timestamp createdAt = 4;
  google.protobuf.Timestamp updatedAt = 5;
}

message Vertices {
  repeated Vertex vertices = 1;
}

message ExcludeField {
  string field = 1;

  enum Option {
    EXCLUDE = 0;
    INCLUDE = 1;
  }

  Option opt = 2;
}

message ExcludeFields {
  repeated ExcludeField excludeField = 1;
}

message VertexRequest {
  Address address = 1;
  ExcludeFields exclude = 2;
}